Fixed broken links

--- a/html/haftungsauschluss.html
+++ b/html/haftungsauschluss.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://www.praxisbergerhoff.de/html/Haftungsauschluss.html">
+    <link rel="canonical" href="https://www.praxisbergerhoff.de/html/haftungsauschluss.html">
     <meta name="description"
         content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen.">
 
@@ -14,7 +14,7 @@
         content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
     <meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.praxisbergerhoff.de/index.html" />
+    <meta property="og:url" content="https://www.praxisbergerhoff.de/haftungsauschluss.html" />
     <meta property="og:image" content="../images/social.png" />
     <meta property="og:image:secure_url" content="../images/social.png" />
 
