--- a/html/impressum.html
+++ b/html/impressum.html
@@ -14,7 +14,7 @@
         content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
     <meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.praxisbergerhoff.de/index.html" />
+    <meta property="og:url" content="https://www.praxisbergerhoff.de/impressum.html" />
     <meta property="og:image" content="../images/social.png" />
     <meta property="og:image:secure_url" content="../images/social.png" />
 
@@ -104,11 +104,12 @@
                 Regelungen einsehbar unter:</p>
             <ul class="behoerdeLinks">
                 <li>
-                    <a href="https://www.aekno.de/page.asp?pageID=57">AEKNO Berufsordnung für die nordrheinischen
+                    <a href="https://www.aekno.de/aerzte/berufsordnung">AEKNO Berufsordnung für die nordrheinischen
                         Ärztinnen
                         und Ärzte</a>
                 </li>
-                <li><a href="https://www.aekno.de/page.asp?pageID=5234">AEKNO Heilberufsgesetz NRW</a></li>
+                <li><a href="https://www.aekno.de/aerzte/gesetze-verordnungen/heilberufsgesetz-nrw">AEKNO
+                        Heilberufsgesetz NRW</a></li>
             </ul>
         </section>
 
