--- a/html/leistungen.html
+++ b/html/leistungen.html
@@ -14,7 +14,7 @@
         content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
     <meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.praxisbergerhoff.de/index.html" />
+    <meta property="og:url" content="https://www.praxisbergerhoff.de/leistungen.html" />
     <meta property="og:image" content="../images/social.png" />
     <meta property="og:image:secure_url" content="../images/social.png" />
 
