--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.praxisbergerhoff.de/index.html" />
     <meta property="og:image" content="/images/social.png" />
-    <meta property="og:image:secure_url" content="/images/social.png" />
+    <meta property="og:image:secure_url" content="images/social.png" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
