--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
     <meta name="description"
         content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen.">
 
+    <!--Social-->
     <meta property="og:title" content="Hausartzt & Betriebsmedizin | Wermelskirchen | Praxis Dr. Bergerhoff" />
     <meta property="og:description"
         content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
     <meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.praxisbergerhoff.de/index.html" />
-    <meta property="og:image" content="/images/social.png" />
-    <meta property="og:image:secure_url" content="images/social.png" />
+    <meta property="og:image" content="https://www.praxisbergerhoff.de/images/social.png" />
+    <meta property="og:image:secure_url" content="https://www.praxisbergerhoff.de/images/social.png" />
 
+    <!--favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="manifest" href="./site.webmanifest">
+
+    <!--CSS-->
     <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/index.css">
+
+    <!--Preload-->
+    <link rel="preload" as="font" type="font/woff2" href="/fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
+
 
     <title>Hausartzt & Betriebsmedizin | Wermelskirchen | Praxis Dr. Bergerhoff</title>
 </head>
