fixed font link path

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="styles/index.css">
 
     <!--Preload-->
-    <link rel="preload" as="font" type="font/woff2" href="/fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="./fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
 
 
     <title>Hausartzt & Betriebsmedizin | Wermelskirchen | Praxis Dr. Bergerhoff</title>
