Updated link URL

--- a/html/leistungen.html
+++ b/html/leistungen.html
@@ -226,7 +226,9 @@
 
 
                     <tr>
-                        <td colspan="2" id="pricelistLink"> <a href="">VDBW Preisliste arbeitsmedizinischer
+                        <td colspan="2" id="pricelistLink"> <a
+                                href="https://www.vdbw.de/fileadmin/user_upload/Preisliste_27._Juli_2011.pdf">VDBW
+                                Preisliste arbeitsmedizinischer
                                 Untersuchungen PDF</a></td>
                     </tr>
                     <tr>
