--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="styles/index.css">
 
     <!--Preload-->
+    <link rel="preload" as="image" href="images/Gruppenfoto2018.webp">
     <link rel="preload" as="font" type="font/woff2" href="./fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
 
 
@@ -64,7 +65,7 @@
             </svg>
 
             <div class="photoAndHeads">
-                <img class="groupPhoto" src="images/Gruppenfoto2018.jpg" width="805" height="549"
+                <img class="groupPhoto" src="images/Gruppenfoto2018.webp" width="805" height="549"
                     alt="Praxis Team von Praxis Dr. Bergerhoff">
                 <input type="checkbox" name="" id="harryInfo"
                     aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen">
@@ -323,7 +324,7 @@
                     d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
                 <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
             </svg>
-            <a href="https://www.openstreetmap.org/node/387844871#map=19/51.14224/7.21592"><img src="images/Map.jpg"
+            <a href="https://www.openstreetmap.org/node/387844871#map=19/51.14224/7.21592"><img src="images/Map.webp"
                     alt="Standsortskarte, Artztpraxis Bergerhoff" width="675" height="268"></a>
         </div>
 
