Restored secondaryColor, fixed bad Html

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             <div class="photoAndHeads">
                 <img class="groupPhoto" src="images/Gruppenfoto2018.webp" width="805" height="549"
                     alt="Praxis Team von Praxis Dr. Bergerhoff">
-                <input type="checkbox" name="" id="harryInfo"
-                    aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen">
+                <input type="checkbox" id="harryInfo" aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen">
                 <img class="harry heads" src="images/harry.png" alt="" width="105" height="140" aria-hidden="true">
                 <div class="harryPopup popups">
                     <label for="harryInfo" aria-label="Info-Fenster Schließen">X</label>
@@ -131,7 +130,7 @@
                     </ul>
                 </div>
 
-                <input type="checkbox" name="" id="eisenhuthInfo"
+                <input type="checkbox" id="eisenhuthInfo"
                     aria-label="Auswählen, um mehr Info zu Cornelia Eisenhuth lesen">
                 <img class="eisenhuth heads" src="images/eisenhuth.png" alt="" width="105" height="140"
                     aria-hidden="true">
@@ -145,8 +144,7 @@
                         Urlaub ihre Kolleginnen an der Rezeption</p>
                 </div>
 
-                <input type="checkbox" name="" id="melanieInfo"
-                    aria-label="Auswählen, um mehr Info zu Melanie Groß lesen">
+                <input type="checkbox" id="melanieInfo" aria-label="Auswählen, um mehr Info zu Melanie Groß lesen">
                 <img class="melanie heads" src="images/melanie.png" alt="" width="105" height="140" aria-hidden="true">
                 <div class="melaniePopup popups">
                     <label for="melanieInfo" aria-label="Info-Fenster Schließen">X</label>
@@ -172,8 +170,7 @@
                     </ul>
                 </div>
 
-                <input type="checkbox" name="" id="carmenInfo"
-                    aria-label="Auswählen, um mehr Info zu Carmen Menz lesen">
+                <input type="checkbox" id="carmenInfo" aria-label="Auswählen, um mehr Info zu Carmen Menz lesen">
                 <img class="carmen heads" src="images/carmen.png" alt="" width="105" height="140" aria-hidden="true">
                 <div class="carmenPopup popups">
                     <label for="carmenInfo" aria-label="Info-Fenster Schließen">X</label>
@@ -194,8 +191,7 @@
                     </ul>
                 </div>
 
-                <input type="checkbox" name="" id="miriamInfo"
-                    aria-label="Auswählen, um mehr Info zu Miriam Hartmann lesen">
+                <input type="checkbox" id="miriamInfo" aria-label="Auswählen, um mehr Info zu Miriam Hartmann lesen">
                 <img class="miriam heads" src="images/miriam.png" alt="" width="105" height="140" aria-hidden="true">
                 <div class="miriamPopup popups">
                     <label for="miriamInfo" aria-label="Info-Fenster Schließen">X</label>
@@ -265,6 +261,7 @@
         <img class="lineToContact2 lineVert" src="images/redLineVert100px.svg" alt="" width="6" height="100"
             aria-hidden="true">
         <div class="lineMaskRight lineMask"></div>
+
         <div class="contactContainer container">
             <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-megaphone" viewBox="0 0 16 16" aria-hidden="true">
                 <path
@@ -272,20 +269,20 @@
             </svg>
 
             <address>
-                <h4>Kontakt</h4>
+                <span class="mainHeader">Kontakt</span>
 
-                <h5 class="sr-only">Hausadresse</h5>
+                <span class="sr-only">Hausadresse</span>
                 Obere Remscheider<br>Straße 32<br>
                 42929 Wermelskirchen
 
 
-                <h5>Telefon</h5>
+                <span class="subheader">Telefon</span>
                 02196 82323
 
-                <h5>Rezepttelefon</h5>
+                <span class="subheader">Rezepttelefon</span>
                 02196 886290
 
-                <h5>Fax</h5>
+                <span class="subheader">Fax</span>
                 02196 974886
             </address>
 
