Content corrections & nav button colors

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                     <ul>
                         <li>1983&mdash;1989</li>
-                        <li>Medizinstudium in Bochum, Essen, Cincinnati (Praktisches Jahr)</li>
+                        <li>Medizinstudium in Bochum, Essen, Cincinnati</li>
                     </ul>
                     <ul>
                         <li>1989</li>
@@ -117,16 +117,8 @@
                             Lüdenscheid</li>
                     </ul>
                     <ul>
-                        <li>2001</li>
-                        <li>In eigener hausärztlicher Praxis niedergelassen</li>
-                    </ul>
-                    <ul>
-                        <li>2002&mdash;2018</li>
-                        <li>Gemeinschaftspraxis mit Frau Dr. Halstenbach</li>
-                    </ul>
-                    <ul>
-                        <li>2018</li>
-                        <li>Arzt Praxis Bergerhoff</li>
+                        <li>Seit 2001</li>
+                        <li>In eigener hausärztlicher und betriebsmedizinisches Praxis niedergelassen</li>
                     </ul>
                 </div>
 
@@ -235,7 +227,7 @@
                     <li>15.00 - 18.00</li>
                 </ul>
 
-                <h5>Mittag</h5>
+                <h5>Mitwoch</h5>
                 <ul>
                     <li>8.00 - 12.00</li>
                 </ul>
