content corrections, google stuff

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </ul>
                     <ul>
                         <li>Seit 2001</li>
-                        <li>In eigener hausärztlicher und betriebsmedizinisches Praxis niedergelassen</li>
+                        <li>In eigener hausärztlicher und betriebsärztlicher Praxis niedergelassen</li>
                     </ul>
                 </div>
 
@@ -227,7 +227,7 @@
                     <li>15.00 - 18.00</li>
                 </ul>
 
-                <h5>Mitwoch</h5>
+                <h5>Mittwoch</h5>
                 <ul>
                     <li>8.00 - 12.00</li>
                 </ul>
