Mobile responsive group picture

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             </svg>
 
             <div class="photoAndHeads">
-                <img class="groupPhoto" src="images/Gruppenfoto2018.webp" width="805" height="549"
-                    alt="Praxis Team von Praxis Dr. Bergerhoff">
+                <img class="groupPhoto" srcset="images/Gruppenfoto2018_mobile.jpg 403w,
+                images/Gruppenfoto2018.webp 805w" sizes="(max-width: 600px) 403px,
+                805px" src="images/Gruppenfoto2018.webp" alt="Praxis Team von Praxis Dr. Bergerhoff">
                 <input type="checkbox" id="harryInfo" aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen">
                 <img class="harry heads" src="images/harry.png" alt="" width="105" height="140" aria-hidden="true">
                 <div class="harryPopup popups">
