Responsive image to mobile as fallback

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="photoAndHeads">
                 <img class="groupPhoto"
                     srcset="images/Gruppenfoto2018.webp 805w, images/Gruppenfoto2018_mobile.jpg 403w" sizes="(min-width: 500px) 805px,
-                403px" src="images/Gruppenfoto2018.webp" width="805" height="549"
+                403px" src="images/Gruppenfoto2018_mobile.jpg" width="403" height="275"
                     alt="Praxis Team von Praxis Dr. Bergerhoff">
                 <input type="checkbox" id="harryInfo" aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen">
                 <img class="harry heads" src="images/harry.png" alt="" width="105" height="140" aria-hidden="true">
