image Preload with srcset and sizes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <link rel="stylesheet" href="styles/index.css">
 
     <!--Preload-->
-    <link rel="preload" as="image" href="images/Gruppenfoto2018_mobile.webp">
+    <link rel="preload" as="image" href="images/Gruppenfoto2018_mobile.webp"
+        imagesrcset="images/Gruppenfoto2018.webp 805w, images/Gruppenfoto2018_mobile.jpg 403w" imagesizes="(min-width: 500px) 805px,
+    403px">
     <link rel="preload" as="font" type="font/woff2" href="./fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
 
 
