--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="styles/index.css">
 
     <!--Preload-->
-    <link rel="preload" as="image" href="images/Gruppenfoto2018_mobile.webp">
+    <!-- <link rel="preload" as="image" href="images/Gruppenfoto2018_mobile.webp"> -->
     <link rel="preload" as="font" type="font/woff2" href="./fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
 
 
@@ -65,7 +65,9 @@
             </svg>
 
             <div class="photoAndHeads">
-                <img class="groupPhoto" src="images/Gruppenfoto2018_mobile.webp" width="604" height="412"
+                <img class="groupPhoto"
+                    srcset="images/Gruppenfoto2018_mobile.webp 0.75x, images/Gruppenfoto2018_desktop.webp 2x"
+                    src="images/Gruppenfoto2018_mobile.webp" width="403" height="275"
                     alt="Praxis Team von Praxis Dr. Bergerhoff">
                 <input type="checkbox" id="harryInfo" aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen">
                 <img class="harry heads" src="images/harry.png" alt="" width="105" height="140" aria-hidden="true">
