--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
             </svg>
 
             <div class="photoAndHeads">
-                <img class="groupPhoto"
-                    srcset="images/Gruppenfoto2018_mobile.webp 0.75x, images/Gruppenfoto2018_desktop.webp 1x"
+                <img class="groupPhoto" srcset="images/Gruppenfoto2018_mobile.webp 0.75x"
                     src="images/Gruppenfoto2018_desktop.webp" width="806" height="550"
                     alt="Praxis Team von Praxis Dr. Bergerhoff">
                 <input type="checkbox" id="harryInfo" aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen">
