Added vacation notice
Simple banner at the top. Will be replaced by a modal when I've learned how! :)

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             <img src="images/logo.svg" alt="" width="317" height="166" aria-hidden="true">
             <h2>Allgemeinmedizin und Betriebsmedizin</h2>
         </header>
+        <!-- Vacation notice-->
+        <section id="vacationNotice">
+            Wir sind im Urlaub bis 07.08.2022. Urlaubsvertretung durch <a href="https://www.praxis-kraemer.de/">Frau
+                Dr.
+                Krämer</a> und <a
+                href="https://www.jameda.de/wermelskirchen/aerzte/innere-allgemeinmediziner/andreas-hemmerich/uebersicht/80117199_1/">
+                Herrn Dr. Hemmerich</a>.
+        </section>
     </div>
     <main>
         <img class="lineToPhoto1 lineVert" src="images/redLineVert100px.svg" alt="" width="6" height="100"
