JavaScript Modal update

--- a/html/impressum.html
+++ b/html/impressum.html
@@ -129,6 +129,9 @@
             <a href="https://www.vecteezy.com/free-vector/doctor-pictogram">Doctor Pictogram
                 Vectors by
                 Vecteezy</a>
+                <a href="https://github.com/n3r4zzurr0/svg-spinners">Clock spinner by
+                    Utkarsh Verma </a>
+
         </section>
     </main>
 
