--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/index.css">
 
+    <!--JS-->
+    <script src="./index.js" defer></script>
+
     <!--Preload-->
     <!-- <link rel="preload" as="image" href="images/Gruppenfoto2018_mobile.webp"> -->
     <link rel="preload" as="font" type="font/woff2" href="./fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
@@ -38,7 +41,6 @@
 </head>
 
 <body>
-
     <div class="topSection">
         <nav>
             <a href="html/leistungen.html">leistungen</a>
@@ -49,7 +51,7 @@
             <img src="images/logo.svg" alt="" width="317" height="166" aria-hidden="true">
             <h2>Allgemeinmedizin und Betriebsmedizin</h2>
         </header>
-        <!-- Vacation notice-->
+        <!-- Vacation
         <section id="vacationNotice">
             Wir sind im Urlaub bis 07.08.2022. Urlaubsvertretung durch <a href="https://www.praxis-kraemer.de/">Frau
                 Dr.
@@ -57,6 +59,7 @@
                 href="https://www.jameda.de/wermelskirchen/aerzte/innere-allgemeinmediziner/andreas-hemmerich/uebersicht/80117199_1/">
                 Herrn Dr. Hemmerich</a>.
         </section>
+        notice-->
     </div>
     <main>
         <img class="lineToPhoto1 lineVert" src="images/redLineVert100px.svg" alt="" width="6" height="100"
@@ -71,145 +74,23 @@
                 <path fill-rule="evenodd"
                     d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2Z" />
             </svg>
-
             <div class="photoAndHeads">
-                <img class="groupPhoto" srcset="images/Gruppenfoto2018_mobile.webp 0.75x"
-                    src="images/Gruppenfoto2018_desktop.webp" width="806" height="550"
-                    alt="Praxis Team von Praxis Dr. Bergerhoff">
-                <input type="checkbox" id="harryInfo" aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen">
-                <img class="harry heads" src="images/harry.png" alt="" width="105" height="140" aria-hidden="true">
-                <div class="harryPopup popups">
-                    <label for="harryInfo" aria-label="Info-Fenster Schließen">X</label>
+                <p class="teamPhotoContainer__caption">Das Praxis-Team: Klicken Sie auf uns ...</p>
+                <img class="groupPhoto" src="./images/gruppenfoto2018_805x549.jpg"
+                    srcset="./images/gruppenfoto2018_201x137.jpg 201w, ./images/gruppenfoto2018_805x549.jpg 805w"
+                    sizes="(max-width: 400px) 201px" alt="Praxis Team von Praxis Dr. Bergerhoff">
 
-                    <img src="images/Bergerhoff_profil.jpg" alt="Dr. Harald Bergerhoff, Allgemeinarzt, Wermelskirchen"
-                        width="219" height="328">
-                    <h2>Harald Bergerhoff</h2>
-                    <h3>Facharzt für Allgemeinmedizin</h3>
+                <div tabindex="0" class="heads harryInfo" id="harrySelector"
+                    aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen"></div>
+                <div tabindex="0" class="heads eisenhuthInfo" id="eisenhuthSelector"
+                    aria-label="Auswählen, um mehr Info zu Cornelia Eisenhuth lesen"></div>
+                <div tabindex="0" class="heads melanieInfo" id="melanieSelector"
+                    aria-label="Auswählen, um mehr Info zu Melanie Groß lesen"></div>
+                <div tabindex="0" class="heads carmenInfo" id="carmenSelector"
+                    aria-label="Auswählen, um mehr Info zu Carmen Menz lesen"></div>
+                <div tabindex="0" class="heads miriamInfo" id="miriamSelector"
+                    aria-label="Auswählen, um mehr Info zu Miriam Hartmann lesen"></div>
 
-                    <ul>
-                        <li>1983&mdash;1989</li>
-                        <li>Medizinstudium in Bochum, Essen, Cincinnati</li>
-                    </ul>
-                    <ul>
-                        <li>1989</li>
-                        <li>Deutsches und amerikanisches Staatsexamen</li>
-                    </ul>
-                    <ul>
-                        <li>1990&mdash;1991</li>
-                        <li>Arzt im Praktikum in Großbritannien (Innere Medizin und Chirurgie) und in Wuppertal
-                            (Neurochirurgie)</li>
-                    </ul>
-                    <ul>
-                        <li>1991&mdash;1992</li>
-                        <li>Assistenzarzt in der Anästhesie im Städt. Klinikum Remscheid</li>
-                    </ul>
-                    <ul>
-                        <li> 1992&mdash;1996</li>
-                        <li>Assistenzarzt am St. Josef Krankenhaus Wipperfürth (Innere Medizin)</li>
-                    </ul>
-                    <ul>
-                        <li>1996&mdash;1997</li>
-                        <li>Weiterbildungsassistent in der Allgemeinmedizin / Lüdenscheid</li>
-                    </ul>
-                    <ul>
-                        <li>1997</li>
-                        <li>Leitung des Community Health Centre in Valencia / Philipinnen</li>
-                    </ul>
-                    <ul>
-                        <li>1998&mdash;1999</li>
-                        <li> Allgemeinmediziner und Betriebsarzt für den Bilfinger Konzern in Nigeria mit Schwerpunkt
-                            Infektions- und Tropenkrankheiten</li>
-                    </ul>
-                    <ul>
-                        <li>1999&mdash;2000</li>
-                        <li> Achtzehnmonatige Tätigkeit als Weiterbildungsassistent im arbeitsmedizinischen Zentrum
-                            Lüdenscheid</li>
-                    </ul>
-                    <ul>
-                        <li>Seit 2001</li>
-                        <li>In eigener hausärztlicher und betriebsärztlicher Praxis niedergelassen</li>
-                    </ul>
-                </div>
-
-                <input type="checkbox" id="eisenhuthInfo"
-                    aria-label="Auswählen, um mehr Info zu Cornelia Eisenhuth lesen">
-                <img class="eisenhuth heads" src="images/eisenhuth.png" alt="" width="105" height="140"
-                    aria-hidden="true">
-                <div class="eisenhuthPopup popups">
-                    <label for="eisenhuthInfo" aria-label="Info-Fenster Schließen">X</label>
-                    <img src="images/Eisenhuth_profil.jpg" alt="Cornelia Eisenhuth" width="219" height="328">
-                    <h2>Cornelia Eisenhuth</h2>
-                    <h3>Studium der Gartenbauwissenschaft</h3>
-                    <p>Nach Elternzeit 2001 Quereinstieg in die Praxis ihres Bruders Herrn Bergerhoff</p>
-                    <p>Seitdem ist Frau Eisenhuth für EDV und Abrechnung und vertritt in Krankheitsfällen und im
-                        Urlaub ihre Kolleginnen an der Rezeption</p>
-                </div>
-
-                <input type="checkbox" id="melanieInfo" aria-label="Auswählen, um mehr Info zu Melanie Groß lesen">
-                <img class="melanie heads" src="images/melanie.png" alt="" width="105" height="140" aria-hidden="true">
-                <div class="melaniePopup popups">
-                    <label for="melanieInfo" aria-label="Info-Fenster Schließen">X</label>
-
-                    <img src="images/Melanie_profil.jpg" alt="Melanie Groß" width="219" height="328">
-                    <h2>Melanie Groß</h2>
-                    <h3>Medizinische Fachangestellte</h3>
-
-
-                    <p>Ausbildung zur medizininischen Fachangestellten.</p>
-
-                    <ul>
-                        <li>2006 bis 2009</li>
-                        <li>Anstellung in einer orthopädischen Praxis</li>
-                    </ul>
-                    <ul>
-                        <li>2009 bis 2016</li>
-                        <li> Tätigkeit in einer chirurgischen Praxis.</li>
-                    </ul>
-                    <ul>
-                        <li>Seit 01.08.2016</li>
-                        <li>verstärke ich das Team dieser Praxis.</li>
-                    </ul>
-                </div>
-
-                <input type="checkbox" id="carmenInfo" aria-label="Auswählen, um mehr Info zu Carmen Menz lesen">
-                <img class="carmen heads" src="images/carmen.png" alt="" width="105" height="140" aria-hidden="true">
-                <div class="carmenPopup popups">
-                    <label for="carmenInfo" aria-label="Info-Fenster Schließen">X</label>
-
-                    <img src="images/Carmen_profil.jpg" alt="Carmen Menz" width="219" height="328">
-                    <h2>Carmen Menz</h2>
-                    <h3>Medizinische Fachangestellte</h3>
-                    <p>Ausbildung zur medizinischen Fachangestellten in einer orthopädischen Praxis.
-                        Danach Tätigkeiten in verschiedenen Fachbereichen wie z.B. Dermatologie und Abrechnungswesen.
-                    </p>
-                    <ul>
-                        <li>Von 2011 bis 2016</li>
-                        <li>Anstellung in einer chirurgischen Praxis</li>
-                    </ul>
-                    <ul>
-                        <li>Seit 01.04.2016</li>
-                        <li>verstärke ich das Team in dieser Praxis</li>
-                    </ul>
-                </div>
-
-                <input type="checkbox" id="miriamInfo" aria-label="Auswählen, um mehr Info zu Miriam Hartmann lesen">
-                <img class="miriam heads" src="images/miriam.png" alt="" width="105" height="140" aria-hidden="true">
-                <div class="miriamPopup popups">
-                    <label for="miriamInfo" aria-label="Info-Fenster Schließen">X</label>
-                    <img src="images/Miriam_profil.jpg" alt="Miriam Hartmann" width="219" height="328">
-                    <h2>Miriam Hartmann</h2>
-                    <h3>Medizinische Fachangestellte</h3>
-                    <p>Ausbildung zur Medizinischen Fachangestellten
-                        in dieser Praxis unter Herrn Dr. Wahabzadeh. <br>Nach Babypause Tätigkeit in einer
-                        Kinderarztpraxis
-                    </p>
-                    <ul>
-                        <li>2009</li>
-                        <li> Wechsel zurück an ihre alte Wirkungsstätte</li>
-                    </ul>
-                    <p>Diabetologische Fortbildungen und Schulungen im Wundmanagement</p>
-                </div>
-                <div class="checkboxFocused"></div>
             </div>
         </div>
 
@@ -218,8 +99,30 @@
 
         <div class="openingTimesContainer container">
             <div class="clockContainer">
-                <img class="clock" src="images/clockFaceEmpty.svg" alt="" width="16" height="16" aria-hidden="true">
-                <img class="clockHand" src="images/clockHand.svg" alt="" width="1" height="7" aria-hidden="true">
+                <svg class="bi bi-clock" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <style>
+                        .spinner_d9Sa {
+                            transform-origin: center
+                        }
+
+                        .spinner_qQQY {
+                            animation: spinner_ZpfF 9s linear infinite
+                        }
+
+                        .spinner_pote {
+                            animation: spinner_ZpfF .75s linear infinite
+                        }
+
+                        @keyframes spinner_ZpfF {
+                            100% {
+                                transform: rotate(360deg)
+                            }
+                        }
+                    </style>
+                    <path d="M12,1A11,11,0,1,0,23,12,11,11,0,0,0,12,1Zm0,20a9,9,0,1,1,9-9A9,9,0,0,1,12,21Z" />
+                    <rect class="spinner_d9Sa spinner_qQQY" x="11" y="6" rx="1" width="2" height="7" />
+                    <rect class="spinner_d9Sa spinner_pote" x="11" y="11" rx="1" width="2" height="9" />
+                </svg>
             </div>
 
             <section class="openingTimes">
@@ -419,10 +322,117 @@
                 <a href="http://www.kvno.de/20patienten/index.html">Kassenärztliche Vereinigung Nordrhein</a>
                 <a href="http://www.german-doctors.de/">German Doctors</a>
             </section>
-
         </div>
-
     </main>
+
+    <div hidden class="modal">
+        <section hidden id="harryWindow" class="popups">
+            <img src="images/Bergerhoff_profil.jpg" alt="Dr. Harald Bergerhoff, Allgemeinarzt, Wermelskirchen"
+                width="219" height="328">
+            <h2>Harald Bergerhoff</h2>
+            <h3>Facharzt für Allgemeinmedizin</h3>
+            <ul>
+                <li>1983&mdash;1989</li>
+                <li>Medizinstudium in Bochum, Essen, Cincinnati</li>
+            </ul>
+            <ul>
+                <li>1989</li>
+                <li>Deutsches und amerikanisches Staatsexamen</li>
+            </ul>
+            <ul>
+                <li>1990&mdash;1991</li>
+                <li>Arzt im Praktikum in Großbritannien (Innere Medizin und Chirurgie) und in Wuppertal
+                    (Neurochirurgie)</li>
+            </ul>
+            <ul>
+                <li>1991&mdash;1992</li>
+                <li>Assistenzarzt in der Anästhesie im Städt. Klinikum Remscheid</li>
+            </ul>
+            <ul>
+                <li> 1992&mdash;1996</li>
+                <li>Assistenzarzt am St. Josef Krankenhaus Wipperfürth (Innere Medizin)</li>
+            </ul>
+            <ul>
+                <li>1996&mdash;1997</li>
+                <li>Weiterbildungsassistent in der Allgemeinmedizin / Lüdenscheid</li>
+            </ul>
+            <ul>
+                <li>1997</li>
+                <li>Leitung des Community Health Centre in Valencia / Philipinnen</li>
+            </ul>
+            <ul>
+                <li>1998&mdash;1999</li>
+                <li> Allgemeinmediziner und Betriebsarzt für den Bilfinger Konzern in Nigeria mit Schwerpunkt
+                    Infektions- und Tropenkrankheiten</li>
+            </ul>
+            <ul>
+                <li>1999&mdash;2000</li>
+                <li> Achtzehnmonatige Tätigkeit als Weiterbildungsassistent im arbeitsmedizinischen Zentrum
+                    Lüdenscheid</li>
+            </ul>
+            <ul>
+                <li>Seit 2001</li>
+                <li>In eigener hausärztlicher und betriebsärztlicher Praxis niedergelassen</li>
+            </ul>
+        </section>
+        <section hidden id="eisenhuthWindow" class="popups">
+            <img src="images/Eisenhuth_profil.jpg" alt="Cornelia Eisenhuth" width="219" height="328">
+            <h2>Cornelia Eisenhuth</h2>
+            <h3>Studium der Gartenbauwissenschaft</h3>
+            <p>Nach Elternzeit 2001 Quereinstieg in die Praxis ihres Bruders Herrn Bergerhoff</p>
+            <p>Seitdem ist Frau Eisenhuth für EDV und Abrechnung und vertritt in Krankheitsfällen und im
+                Urlaub ihre Kolleginnen an der Rezeption</p>
+        </section>
+        <section hidden id="melanieWindow" class="melaniePopup popups">
+            <img src="images/Melanie_profil.jpg" alt="Melanie Groß" width="219" height="328">
+            <h2>Melanie Groß</h2>
+            <h3>Medizinische Fachangestellte</h3>
+            <p>Ausbildung zur medizininischen Fachangestellten.</p>
+            <ul>
+                <li>2006 bis 2009</li>
+                <li>Anstellung in einer orthopädischen Praxis</li>
+            </ul>
+            <ul>
+                <li>2009 bis 2016</li>
+                <li> Tätigkeit in einer chirurgischen Praxis.</li>
+            </ul>
+            <ul>
+                <li>Seit 01.08.2016</li>
+                <li>verstärke ich das Team dieser Praxis.</li>
+            </ul>
+        </section>
+        <section hidden id="carmenWindow" class="popups">
+            <img src="images/Carmen_profil.jpg" alt="Carmen Menz" width="219" height="328">
+            <h2>Carmen Menz</h2>
+            <h3>Medizinische Fachangestellte</h3>
+            <p>Ausbildung zur medizinischen Fachangestellten in einer orthopädischen Praxis.
+                Danach Tätigkeiten in verschiedenen Fachbereichen wie z.B. Dermatologie und Abrechnungswesen.
+            </p>
+            <ul>
+                <li>Von 2011 bis 2016</li>
+                <li>Anstellung in einer chirurgischen Praxis</li>
+            </ul>
+            <ul>
+                <li>Seit 01.04.2016</li>
+                <li>verstärke ich das Team in dieser Praxis</li>
+            </ul>
+        </section>
+
+        <section hidden id="miriamWindow" class="popups">
+            <img src="images/Miriam_profil.jpg" alt="Miriam Hartmann" width="219" height="328">
+            <h2>Miriam Hartmann</h2>
+            <h3>Medizinische Fachangestellte</h3>
+            <p>Ausbildung zur Medizinischen Fachangestellten
+                in dieser Praxis unter Herrn Dr. Wahabzadeh. <br>Nach Babypause Tätigkeit in einer
+                Kinderarztpraxis
+            </p>
+            <ul>
+                <li>2009</li>
+                <li> Wechsel zurück an ihre alte Wirkungsstätte</li>
+            </ul>
+            <p>Diabetologische Fortbildungen und Schulungen im Wundmanagement</p>
+        </section>
+    </div>
 
     <footer>
         <a href="html/datenschutz.html">Datenschutz</a>
