--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
             </svg>
             <div class="photoAndHeads">
                 <p class="teamPhotoContainer__caption">Das Praxis-Team: Klicken Sie auf uns ...</p>
-                <img class="groupPhoto" src="./images/gruppenfoto2018_805x549.jpg"
+                <img class="groupPhoto" src="./images/gruppenfoto2018_805x549.jpg" width="805" height="549"
                     srcset="./images/gruppenfoto2018_201x137.jpg 201w, ./images/gruppenfoto2018_805x549.jpg 805w"
                     sizes="(max-width: 400px) 201px" alt="Praxis Team von Praxis Dr. Bergerhoff">
 
-                <div tabindex="0" class="heads harryInfo" id="harrySelector"
+                <div tabindex="0" class="heads harryInfo" id="harrySelector" role="button"
                     aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen"></div>
-                <div tabindex="0" class="heads eisenhuthInfo" id="eisenhuthSelector"
+                <div tabindex="0" class="heads eisenhuthInfo" id="eisenhuthSelector" role="button"
                     aria-label="Auswählen, um mehr Info zu Cornelia Eisenhuth lesen"></div>
-                <div tabindex="0" class="heads melanieInfo" id="melanieSelector"
+                <div tabindex="0" class="heads melanieInfo" id="melanieSelector" role="button"
                     aria-label="Auswählen, um mehr Info zu Melanie Groß lesen"></div>
-                <div tabindex="0" class="heads carmenInfo" id="carmenSelector"
+                <div tabindex="0" class="heads carmenInfo" id="carmenSelector" role="button"
                     aria-label="Auswählen, um mehr Info zu Carmen Menz lesen"></div>
-                <div tabindex="0" class="heads miriamInfo" id="miriamSelector"
+                <div tabindex="0" class="heads miriamInfo" id="miriamSelector" role="button"
                     aria-label="Auswählen, um mehr Info zu Miriam Hartmann lesen"></div>
 
             </div>
@@ -99,7 +99,8 @@
 
         <div class="openingTimesContainer container">
             <div class="clockContainer">
-                <svg class="bi bi-clock" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <svg class="bi bi-clock" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true">
                     <style>
                         .spinner_d9Sa {
                             transform-origin: center
