Fixed accessibility heading skip

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2Z" />
             </svg>
             <div class="photoAndHeads">
-                <p class="teamPhotoContainer__caption">Das Praxis-Team: Klicken Sie auf uns ...</p>
+                <h3 class="teamPhotoContainer__caption">Das Praxis-Team: Klicken Sie auf uns ...</h3>
                 <img class="groupPhoto" src="./images/gruppenfoto2018_805x549.jpg" width="805" height="549"
                     srcset="./images/gruppenfoto2018_201x137.jpg 201w, ./images/gruppenfoto2018_805x549.jpg 805w"
                     sizes="(max-width: 400px) 201px" alt="Praxis Team von Praxis Dr. Bergerhoff">
