adds new staff members

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://www.praxisbergerhoff.de/index.html">
+    <link rel="canonical" href="https://www.praxisbergerhoff.de/">
     <meta name="description"
         content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen.">
 
@@ -76,20 +76,30 @@
             </svg>
             <div class="photoAndHeads">
                 <h3 class="teamPhotoContainer__caption">Das Praxis-Team: Klicken Sie auf uns ...</h3>
-                <img class="groupPhoto" src="./images/gruppenfoto2018_805x549.jpg" width="805" height="549"
-                    srcset="./images/gruppenfoto2018_201x137.jpg 201w, ./images/gruppenfoto2018_805x549.jpg 805w"
-                    sizes="(max-width: 400px) 201px" alt="Praxis Team von Praxis Dr. Bergerhoff">
+                <img class="groupPhoto" src="./images/Groupphoto_780x480px.webp" width="780" height="480"
+                    srcset="./images/Groupphoto_520x320px.webp 520w, ./images/Groupphoto_780x480px.webp 780w"
+                    sizes="(max-width: 400px) 520px" alt="Praxis Team von Praxis Dr. Bergerhoff">
 
-                <div tabindex="0" class="heads harryInfo" id="harrySelector" role="button"
-                    aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen"></div>
-                <div tabindex="0" class="heads eisenhuthInfo" id="eisenhuthSelector" role="button"
-                    aria-label="Auswählen, um mehr Info zu Cornelia Eisenhuth lesen"></div>
+                <div tabindex="0" class="heads annaInfo" id="annaSelector" role="button"
+                    aria-label="Auswählen, um mehr Info zu Anna Kocsis lesen"></div>
                 <div tabindex="0" class="heads melanieInfo" id="melanieSelector" role="button"
                     aria-label="Auswählen, um mehr Info zu Melanie Groß lesen"></div>
-                <div tabindex="0" class="heads carmenInfo" id="carmenSelector" role="button"
-                    aria-label="Auswählen, um mehr Info zu Carmen Menz lesen"></div>
                 <div tabindex="0" class="heads miriamInfo" id="miriamSelector" role="button"
                     aria-label="Auswählen, um mehr Info zu Miriam Hartmann lesen"></div>
+                <div tabindex="0" class="heads ubaxInfo" id="ubaxSelector" role="button"
+                    aria-label="Auswählen, um mehr Info zu Ubax Mursal lesen"></div>
+                <div tabindex="0" class="heads eisenhuthInfo" id="eisenhuthSelector" role="button"
+                    aria-label="Auswählen, um mehr Info zu Cornelia Eisenhuth lesen"></div>
+                <div tabindex="0" class="heads carmenInfo" id="carmenSelector" role="button"
+                    aria-label="Auswählen, um mehr Info zu Carmen Menz lesen"></div>
+                <div tabindex="0" class="heads harryInfo" id="harrySelector" role="button"
+                    aria-label="Auswählen, um mehr Info zu Harald Bergerhoff lesen"></div>
+
+
+
+
+
+
 
             </div>
         </div>
@@ -377,7 +387,7 @@
             </ul>
         </section>
         <section hidden id="eisenhuthWindow" class="popups">
-            <img src="images/Eisenhuth_profil.jpg" alt="Cornelia Eisenhuth" width="219" height="328">
+            <img src="images/Eisenhuth_profil.webp" alt="Cornelia Eisenhuth" width="219" height="328">
             <h2>Cornelia Eisenhuth</h2>
             <h3>Studium der Gartenbauwissenschaft</h3>
             <p>Nach Elternzeit 2001 Quereinstieg in die Praxis ihres Bruders Herrn Bergerhoff</p>
@@ -385,7 +395,7 @@
                 Urlaub ihre Kolleginnen an der Rezeption</p>
         </section>
         <section hidden id="melanieWindow" class="melaniePopup popups">
-            <img src="images/Melanie_profil.jpg" alt="Melanie Groß" width="219" height="328">
+            <img src="images/Melanie_profil.webp" alt="Melanie Groß" width="219" height="328">
             <h2>Melanie Groß</h2>
             <h3>Medizinische Fachangestellte</h3>
             <p>Ausbildung zur medizininischen Fachangestellten.</p>
@@ -403,7 +413,7 @@
             </ul>
         </section>
         <section hidden id="carmenWindow" class="popups">
-            <img src="images/Carmen_profil.jpg" alt="Carmen Menz" width="219" height="328">
+            <img src="images/Carmen_profil.webp" alt="Carmen Menz" width="219" height="328">
             <h2>Carmen Menz</h2>
             <h3>Medizinische Fachangestellte</h3>
             <p>Ausbildung zur medizinischen Fachangestellten in einer orthopädischen Praxis.
@@ -420,7 +430,7 @@
         </section>
 
         <section hidden id="miriamWindow" class="popups">
-            <img src="images/Miriam_profil.jpg" alt="Miriam Hartmann" width="219" height="328">
+            <img src="images/Miriam_profil.webp" alt="Miriam Hartmann" width="219" height="328">
             <h2>Miriam Hartmann</h2>
             <h3>Medizinische Fachangestellte</h3>
             <p>Ausbildung zur Medizinischen Fachangestellten
@@ -432,6 +442,83 @@
                 <li> Wechsel zurück an ihre alte Wirkungsstätte</li>
             </ul>
             <p>Diabetologische Fortbildungen und Schulungen im Wundmanagement</p>
+        </section>
+
+        <section hidden id="ubaxWindow" class="popups">
+            <img src="images/UbaxaProfil_427x320px.webp" alt="Ubax Mursal" width="427" height="320">
+            <h2>Ubax Mursal</h2>
+            <h3>20 Jahre alt</h3>
+            <p>Ubax Mursal ist unsere Langzeitpraktikantin für sechs Monate
+
+                und unterstützt uns tatkräftig bei Blutabnahmen, EKG
+
+                und Audiometrien.
+
+                Frau Mursal stammt aus Somalia,
+
+                ist seit 2018 in Deutschland und besucht das
+
+                Berufskolleg in Wermelskirchen. Nach dem
+
+                Schulabschluss strebt sie die Ausbildung
+
+                in einem Gesundheitsberuf an.
+            </p>
+        </section>
+
+        <section hidden id="annaWindow" class="popups">
+            <img src="images/Anna_profil_320x482px.jpg" alt="Miriam Hartmann" width="320" height="482">
+            <h2>Anna Kocsis</h2>
+            <ul>
+                <li>2004-2010</li>
+                <li>Universität Szeged (Ungarn), Medizinische Fakultät, Szeged Studium Humanmedizin, 2010 Approbation
+                    Düsseldorf</li>
+            </ul>
+            <ul>
+                <li>01.01.2011-31.10.2018</li>
+                <li>Assistenzärztin in Anästhesie Klinikverbund St. Antonius und St. Josef, Cellitinnen, Wuppertal</li>
+            </ul>
+            <ul>
+                <li>2011-2013</li>
+                <li>Stationsärztin auf der Interdisziplinären Intensivstation, Petrus Krankenhaus Wuppertal</li>
+            </ul>
+            <ul>
+                <li>2014-2017</li>
+                <li> Elternzeit</li>
+            </ul>
+            <ul>
+                <li>01.11.2018-01.2020</li>
+                <li> Assistenzärztin in Innere Medizin / Geriatrie , Sana Krankenhaus Radevormwald</li>
+            </ul>
+            <ul>
+                <li>01.2020 -02.2021</li>
+                <li>Assistenzärztin in Anästhesie, Sana Krankenhaus Radevormwald</li>
+            </ul>
+            <ul>
+                <li>09/02/2021</li>
+                <li> Facharztprüfung für Anästhesie </li>
+            </ul>
+            <ul>
+                <li>03.2021-09.2022</li>
+                <li> Oberärztin Geriatrie Sana Krankenhaus Radevormwald</li>
+            </ul>
+            <ul>
+                <li>Zusatzbezeichnung Geriatrie</li>
+                <li> 06/2022</li>
+            </ul>
+            <ul>
+                <li>2022</li>
+                <li> Ausbildung Epigenetik Coach</li>
+            </ul>
+            <ul>
+                <li>2022</li>
+                <li> Ausbildung in Funktionelle Medizin, IFMS Institut Funktionelle Medizin und Stressmedizin Hannover
+                </li>
+            </ul>
+            <ul>
+                <li>2022</li>
+                <li> Ausbildung in Schlafmedizin , Institut für Schlafmedizin München</li>
+            </ul>
         </section>
     </div>
 
