replaces images as webp

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
     <div hidden class="modal">
         <section hidden id="harryWindow" class="popups">
-            <img src="images/Bergerhoff_profil.jpg" alt="Dr. Harald Bergerhoff, Allgemeinarzt, Wermelskirchen"
+            <img src="images/Bergerhoff_profil.webp" alt="Dr. Harald Bergerhoff, Allgemeinarzt, Wermelskirchen"
                 width="219" height="328">
             <h2>Harald Bergerhoff</h2>
             <h3>Facharzt für Allgemeinmedizin</h3>
@@ -467,7 +467,7 @@
         </section>
 
         <section hidden id="annaWindow" class="popups">
-            <img src="images/Anna_profil_320x482px.jpg" alt="Miriam Hartmann" width="320" height="482">
+            <img src="images/Anna_profil_320x482px.webp" alt="Miriam Hartmann" width="320" height="482">
             <h2>Anna Kocsis</h2>
             <ul>
                 <li>2004-2010</li>
