spelling and price corrections

--- a/html/impressum.html
+++ b/html/impressum.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://www.praxisbergerhoff.de/html/impressum.html">
     <meta name="description"
-        content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen.">
+        content="Arztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen.">
 
     <!--Social-->
     <meta property="og:title" content="Impressum | Praxis Dr. Bergerhoff | Wermelskirchen" />
     <meta property="og:description"
-        content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
+        content="Arztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
     <meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.praxisbergerhoff.de/impressum.html" />
@@ -30,7 +30,7 @@
     <!--Preload-->
     <link rel="preload" as="font" type="font/woff2" href="../fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
 
-    <title>Impressum | Praxis Dr. Bergerhoff</title>
+    <title>Impressum | Praxis Bergerhoff</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
         </nav>
 
         <header>
-            <h1 class="sr-only">Praxis Dr. Bergerhoff, Impressum Seite</h1>
+            <h1 class="sr-only">Praxis Bergerhoff, Impressum Seite</h1>
             <img src="../images/logo.svg" alt="" width="317" height="166" aria-hidden="true">
             <h2>Allgemeinmedizin und Betriebsmedizin</h2>
         </header>
@@ -129,8 +129,8 @@
             <a href="https://www.vecteezy.com/free-vector/doctor-pictogram">Doctor Pictogram
                 Vectors by
                 Vecteezy</a>
-                <a href="https://github.com/n3r4zzurr0/svg-spinners">Clock spinner by
-                    Utkarsh Verma </a>
+            <a href="https://github.com/n3r4zzurr0/svg-spinners">Clock spinner by
+                Utkarsh Verma </a>
 
         </section>
     </main>
