--- a/html/leistungen.html
+++ b/html/leistungen.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://www.praxisbergerhoff.de/html/leistungen.html">
     <meta name="description"
-        content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen.">
+        content="Arztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen.">
 
     <!--Social-->
-    <meta property="og:title" content="Leistungen | Praxis Dr. Bergerhoff | Wermelskirchen" />
+    <meta property="og:title" content="Leistungen | Praxis Bergerhoff | Wermelskirchen" />
     <meta property="og:description"
-        content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
+        content="Arztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
     <meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.praxisbergerhoff.de/leistungen.html" />
@@ -30,7 +30,7 @@
     <!--Preload-->
     <link rel="preload" as="font" type="font/woff2" href="../fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
 
-    <title>Leistungen | Praxis Dr. Bergerhoff</title>
+    <title>Leistungen | Praxis Bergerhoff</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
         </nav>
 
         <header>
-            <h1 class="sr-only">Praxis Dr. Bergerhoff, Leistungen Seite</h1>
+            <h1 class="sr-only">Praxis Bergerhoff, Leistungen Seite</h1>
             <img src="../images/logo.svg" alt="" width="317" height="166" aria-hidden="true">
             <h2>Allgemeinmedizin und Betriebsmedizin</h2>
         </header>
@@ -175,12 +175,12 @@
 
                     <tr>
                         <td>Tauchtauglichkeitsuntersuchung:</td>
-                        <td>ab 50,00 Euro abhängig vom Aufwand</td>
+                        <td>ab 60,00 Euro abhängig vom Aufwand</td>
                     </tr>
 
                     <tr>
                         <td>G26.3 (Träger von schwerem Atemschutz):</td>
-                        <td>110,00 Euro</td>
+                        <td>120,00 Euro</td>
                     </tr>
 
                     <tr>
@@ -190,22 +190,22 @@
 
                     <tr>
                         <td>G42 (Untersuchung nach Biostoffverordnung):</td>
-                        <td>50,00 Euro Plus Labor = variabel (einfacher GOÄ-Satz)</td>
+                        <td>55,00 Euro Plus Labor = variabel (einfacher GOÄ-Satz)</td>
                     </tr>
 
                     <tr>
                         <td>G25 (Fahr- und Steuertätigkeit):</td>
-                        <td>60,00 Euro</td>
+                        <td>66,00 Euro</td>
                     </tr>
 
                     <tr>
                         <td>G20 (Lärmexposition):</td>
-                        <td>25,00 Euro</td>
+                        <td>28,00 Euro</td>
                     </tr>
 
                     <tr>
                         <td>Untersuchung für Motorsägenführerschein:</td>
-                        <td>60,00 Euro</td>
+                        <td>66,00 Euro</td>
                     </tr>
 
                     <tr>
