--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://www.praxisbergerhoff.de/">
     <meta name="description"
-        content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen.">
+        content="Arztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen.">
 
     <!--Social-->
-    <meta property="og:title" content="Hausartzt & Betriebsmedizin | Wermelskirchen | Praxis Dr. Bergerhoff" />
+    <meta property="og:title" content="Hausarzt & Betriebsmedizin | Wermelskirchen | Praxis Bergerhoff" />
     <meta property="og:description"
-        content="Artztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
+        content="Arztpraxis Bergerhoff, Allgemein- und Betriebsmedizin in Wermelskirchen. Ihr erster Ansprechpartner in allen Gesundheitsfragen." />
     <meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.praxisbergerhoff.de/index.html" />
@@ -37,7 +37,7 @@
     <link rel="preload" as="font" type="font/woff2" href="./fonts/radio-canada-v11-latin-regular.woff2" crossorigin>
 
 
-    <title>Hausartzt & Betriebsmedizin | Wermelskirchen | Praxis Dr. Bergerhoff</title>
+    <title>Hausarzt & Betriebsmedizin | Wermelskirchen | Praxis Bergerhoff</title>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         </nav>
 
         <header>
-            <h1 class="sr-only">Praxis Dr. Bergerhoff, Willkommen Seite</h1>
+            <h1 class="sr-only">Praxis Bergerhoff, Willkommen Seite</h1>
             <img src="images/logo.svg" alt="" width="317" height="166" aria-hidden="true">
             <h2>Allgemeinmedizin und Betriebsmedizin</h2>
         </header>
@@ -235,7 +235,7 @@
                 <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
             </svg>
             <a href="https://www.openstreetmap.org/node/387844871#map=19/51.14224/7.21592"><img src="images/Map.webp"
-                    alt="Standsortskarte, Artztpraxis Bergerhoff" width="675" height="268"></a>
+                    alt="Standsortskarte, Arztpraxis Bergerhoff" width="675" height="268"></a>
         </div>
 
         <img class="lineToInfo lineVert" src="images/greenLineVertical.svg" alt="" width="7" height="251"
@@ -452,7 +452,8 @@
             </ul>
             <ul>
                 <li>01.01.2011-31.10.2018</li>
-                <li>Assistenzärztin in Anästhesie Klinikverbund St. Antonius und St. Josef, Cellitinnen, Wuppertal</li>
+                <li>Assistenzärztin in der Anästhesie Klinikverbund St. Antonius und St. Josef, Cellitinnen, Wuppertal
+                </li>
             </ul>
             <ul>
                 <li>2011-2013</li>
@@ -464,11 +465,11 @@
             </ul>
             <ul>
                 <li>01.11.2018-01.2020</li>
-                <li> Assistenzärztin in Innere Medizin / Geriatrie , Sana Krankenhaus Radevormwald</li>
+                <li> Assistenzärztin in der Inneren Medizin / Geriatrie , Sana Krankenhaus Radevormwald</li>
             </ul>
             <ul>
                 <li>01.2020 -02.2021</li>
-                <li>Assistenzärztin in Anästhesie, Sana Krankenhaus Radevormwald</li>
+                <li>Assistenzärztin in der Anästhesie, Sana Krankenhaus Radevormwald</li>
             </ul>
             <ul>
                 <li>09/02/2021</li>
@@ -476,7 +477,7 @@
             </ul>
             <ul>
                 <li>03.2021-09.2022</li>
-                <li> Oberärztin Geriatrie Sana Krankenhaus Radevormwald</li>
+                <li> Oberärztin in der Geriatrie des Sana-Krankenhauses Radevormwald</li>
             </ul>
             <ul>
                 <li>Zusatzbezeichnung Geriatrie</li>
@@ -488,7 +489,7 @@
             </ul>
             <ul>
                 <li>2022</li>
-                <li> Ausbildung in Funktionelle Medizin, IFMS Institut Funktionelle Medizin und Stressmedizin Hannover
+                <li> Ausbildung in Funktioneller Medizin, IFMS Institut Funktionelle Medizin und Stressmedizin Hannover
                 </li>
             </ul>
             <ul>
