--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           />
         </svg>
         <section>
-          <h4 class="mainHeader">Urlaubs-Notizen</h4>
+          <h4 class="mainHeader">Urlaub</h4>
           <div id="urlaubsnotizen"></div>
         </section>
       </div>
